fix: enhance main section styles for improved layout and readability

--- a/.res/css/styles.css
+++ b/.res/css/styles.css
@@ -89,7 +89,18 @@ header a.act {
 }
 
 /* Estilo de la página principal */
-
+main {
+    margin: 75px auto;
+    width: 70%;
+    padding: 20px;
+    background-color: var(--color001);
+    border-radius: 15px;
+    color: var(--color002);
+    font-size: 20px;
+    line-height: 1.5;
+    text-align: center;
+    box-shadow: 0 10px 10px var(--trans);
+}
 
 main img {
     display: flex;
